--- a/index.html
+++ b/index.html
@@ -234,6 +234,7 @@
                             </ul>
                         </nav>
                     </div>
+                    test
                     <div class="form2-col col-25 contacts">
                         <p>Адрес: Наб. реки Фонтанки 10-15</p>
                         <p>Телефон: 8 (812) 123-45-67</p>
