--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 </div>
             </header>
             <div class="txt-begin">
-                <h1>Жилой комплекс <br> в историческом центре</h1>
+                <h1>жилой комплекс <br> в историческом центре</h1>
                 <p class="mouse"><a href="#about" class="icon-mouse"></a></p>
             </div>
             <div class="row top-contacts aic jcc">
