--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
     <link href="fonts/style.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
-    
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
 </head>
 <body>
     <div class="ovh">
@@ -19,25 +22,25 @@
                     <div class="row aic jcb">
                         <div class="pd">
                             <a href="#begin" class="logo">
-                                <img src="img/logo.svg" alt="logo">
+                                <img data-wow-iteration="infinite" class="wow animate__pulse" src="img/logo.svg" alt="logo">
                             </a>
                         </div>
                         <nav class="menu-block pd">
                             <ul class="menu">
                                 <li class="menu-item">
-                                    <a href="#">О комплексе</a>
+                                    <a href="#about">О комплексе</a>
                                 </li>
                                 <li class="menu-item">
-                                    <a href="#">Район</a>
+                                    <a href="#maps">Район</a>
                                 </li>
                                 <li class="menu-item">
-                                    <a href="#">Каталог квартир</a>
+                                    <a href="#lofts">Каталог квартир</a>
                                 </li>
                                 <li class="menu-item">
-                                    <a href="#">Ипотека</a>
+                                    <a href="#form">Ипотека</a>
                                 </li>
                                 <li class="menu-item">
-                                    <a href="#">Контакты</a>
+                                    <a href="#footer">Контакты</a>
                                 </li>
                             </ul>
                         </nav>
@@ -83,32 +86,32 @@
         </section>
         <section id="lofts">
             <div class="container pr">
-                <h2>Наши квартиры</h2>
+                <h2 class="wow animate__bounceInDown">Наши квартиры</h2>
                 <div class="row">
                     <div class="lofts-col col-50">
                         <div class="imgloft" style="background-image: url(img/loft3.jpg);">
-                            <div class="grad">
+                            <div class="grad wow animate__zoomIn">
                                 <p>Лофт — 3 этажа</p>
                             </div>
                         </div> 
                     </div>
                     <div class="lofts-col col-50">
                         <div class="imgloft" style="background-image: url(img/loft2.jpg);">
-                            <div class="grad">
+                            <div class="grad wow animate__zoomIn">
                                 <p>Лофт — 2 этажа</p>
                             </div>
                         </div> 
                     </div>
                     <div class="lofts-col col-50">
                         <div class="imgloft" style="background-image: url(img/loft3.jpg);">
-                            <div class="grad">
+                            <div class="grad wow animate__zoomIn">
                                 <p>Лофт — 3 этажа</p>
                             </div>
                         </div> 
                     </div>
                     <div class="lofts-col col-50">
                         <div class="imgloft" style="background-image: url(img/loft2.jpg);">
-                            <div class="grad">
+                            <div class="grad wow animate__zoomIn">
                                 <p>Лофт — 2 этажа</p>
                             </div>
                         </div> 
@@ -121,20 +124,20 @@
             <div class="container pr">
                 <div class="row aie"> 
                     <div class="form-col left-form col-50">
-                        <h3>Хотите посмотреть?</h3>
+                        <h3 class="myAnimate">Хотите посмотреть?</h3>
                         <p>Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. 
                             Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века. 
                             В то время некий безымянный печатник создал большую коллекцию размеров и форм шрифтов, используя Lorem Ipsum для распечатки образцов. </p>
                     </div>
                     <div class="form-col right-form col-50">
                         <form class="row tac aic">
-                            <div class="form2-col col-50">
+                            <div class="form2-col col-50 animate__animated animate__backInDown">
                                 <input type="text" placeholder="Ваше имя">
                             </div>
-                            <div class="form2-col col-50">
+                            <div class="form2-col col-50 animate__animated animate__backInDown">
                                 <input type="text" placeholder="Ваш телефон">
                             </div>
-                            <div class="form2-col col-50">
+                            <div class="form2-col col-50 animate__animated animate__backInDown">
                                 <p>*Мы никому не передаем ваши данные. 
                                     И не сохраняем ваш номер в базу.</p>
                             </div>
@@ -189,26 +192,26 @@
                 <div class="row">
                     <div class="form2-col col-25">
                         <a href="#begin" class="logo">
-                            <img src="img/logo.svg" alt="logo">
+                            <img data-wow-iteration="infinite" class="wow animate__pulse" src="img/logo.svg" alt="logo">
                         </a>
                     </div>
                     <div class="form2-col col-25">
                         <nav class="menu-block">
                             <ul class="menu">
                                 <li class="menu-item">
-                                    <a href="#">О комплексе</a>
+                                    <a href="#about">О комплексе</a>
                                 </li>
                                 <li class="menu-item">
-                                    <a href="#">Район</a>
+                                    <a href="#maps">Район</a>
                                 </li>
                                 <li class="menu-item">
-                                    <a href="#">Каталог квартир</a>
+                                    <a href="#lofts">Каталог квартир</a>
                                 </li>
                                 <li class="menu-item">
-                                    <a href="#">Ипотека</a>
+                                    <a href="#form">Ипотека</a>
                                 </li>
                                 <li class="menu-item">
-                                    <a href="#">Контакты</a>
+                                    <a href="#footer">Контакты</a>
                                 </li>
                             </ul>
                         </nav>
@@ -217,19 +220,19 @@
                         <nav class="menu-block">
                             <ul class="menu">
                                 <li class="menu-item">
-                                    <a href="#">О комплексе</a>
+                                    <a href="#about">О комплексе</a>
                                 </li>
                                 <li class="menu-item">
-                                    <a href="#">Район</a>
+                                    <a href="#maps">Район</a>
                                 </li>
                                 <li class="menu-item">
-                                    <a href="#">Каталог квартир</a>
+                                    <a href="#lofts">Каталог квартир</a>
                                 </li>
                                 <li class="menu-item">
-                                    <a href="#">Ипотека</a>
+                                    <a href="#form">Ипотека</a>
                                 </li>
                                 <li class="menu-item">
-                                    <a href="#">Контакты</a>
+                                    <a href="#footer">Контакты</a>
                                 </li>
                             </ul>
                         </nav>
@@ -250,5 +253,7 @@
             </div>
         </footer>
     </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
+    <script src="js/my.js"></script>
 </body>
 </html> 
