time until new year

--- a/index.html
+++ b/index.html
@@ -48,6 +48,13 @@
                 </div>
             </header>
             <div class="txt-begin">
+                <p class="header-subtitle">до Нового Года осталось</p>
+                <div class="banner-tick">
+                    <samp id="d"></samp>
+                    <samp id="h"></samp>
+                    <samp id="m"></samp>
+                    <samp id="s"></samp>
+                </div>
                 <h1>жилой комплекс <br> в историческом центре</h1>
                 <p class="mouse"><a href="#about" class="icon-mouse"></a></p>
             </div>
