--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href="css/reset.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
     <link href="fonts/style.css" rel="stylesheet">
+    <link href="css/adaptive.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
     <link
@@ -16,6 +17,12 @@
 </head>
 <body>
     <div class="ovh">
+        <div class="closeblock"></div>
+        <div class="btnmenu jcb">
+            <div class="linemenu"></div>
+            <div class="linemenu"></div>
+            <div class="linemenu"></div>
+        </div>
         <section id="begin">
             <header>
                 <div class="container">
@@ -26,6 +33,9 @@
                             </a>
                         </div>
                         <nav class="menu-block pd">
+                            <a href="#begin" class="logo moblogo">
+                                <img data-wow-iteration="infinite" class="wow animate__pulse" src="img/logo.svg" alt="logo">
+                            </a>
                             <ul class="menu">
                                 <li class="menu-item">
                                     <a href="#about">О комплексе</a>
